--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!-- Reactive MongoDB Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
