Proving jacoco report and pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
+                            <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
