--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,9 @@
         <profile>
             <id>exclude-e2e-tests</id>
             <activation>
-                <activeByDefault>false</activeByDefault> <!-- Este perfil no se activa por defecto -->
+                <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
-                <!-- Excluir los tests E2E de cualquier tipo -->
                 <skip.endtoend.tests>true</skip.endtoend.tests>
             </properties>
         </profile>
@@ -105,6 +104,7 @@
                         </goals>
                         <configuration>
                             <excludes>
+                                <exclude>**/domain/*</exclude>
                                 <exclude>**/*EndToEndTest.java</exclude>
                             </excludes>
                         </configuration>
