External connection with RouteMicroservice added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://nabz:nabz@workshop.rh1jm.mongodb.net/Workshop?retryWrites=true&w=majority
+routes:
+  api:
+    base-url: http://localhost:8081
+    get-by-id: /routes/{idString}
